--- a/about.html
+++ b/about.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About - MI349 Blog</title>
+    <title>About - Molly's Blog</title>
 </head>
 <body>
     <header>
-        <h1>About MI349 Blog</h1>
+        <h1>About Molly and her Blog</h1>
         <nav>
             <a href="index.html">Home</a> |
             <a href="about.html">About</a> |
@@ -15,10 +15,31 @@
         </nav>
     </header>
     <main>
-        <p>This page provides information about the MI349 Blog.</p>
+        <section>
+            <h2>Hi, I’m Molly!</h2>
+            <img src="https://via.placeholder.com/250" alt="Photo of Molly">
+
+            <p>
+                Welcome to my blog! This page is for my class at Michigan State University. I am currently a senior studying Information Science. I created this blog as part of my coursework for MI349, where I am learning about web development and content creation.
+            </p>
+            <p>
+                Once I graduate, I hope to work in database management or data architecture. Eventually, I would like to get a master's degree in data science. Outside of my schooling, I am involved in the marching band here at MSU, I am in a service sorority, and I love to spend time with the people I care about.
+            </p>
+
+            <h3>A Few Fun Facts About Me:</h3>
+            <ul>
+                <li>My roommates and I have a cat.</li>
+                <li>I grew up in Lansing, MI.</li>
+                <li>I love to travel - my most recent trip was to Tanzania.</li>
+            </ul>
+
+            <p>
+                Thanks for checking out my blog - I hope to see you soon!
+            </p>
+        </section>
     </main>
     <footer>
-        <p>&copy; 2025 MI349 Blog</p>
+        <p>&copy; 2025 Molly's Blog</p>
     </footer>
 </body>
 </html>
