--- a/contact.html
+++ b/contact.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact - MI349 Blog</title>
+    <title>Contact - Molly's Blog</title>
 </head>
 <body>
     <header>
-        <h1>Contact MI349 Blog</h1>
+        <h1>Contact Molly's Blog</h1>
         <nav>
             <a href="index.html">Home</a> |
             <a href="about.html">About</a> |
@@ -15,10 +15,37 @@
         </nav>
     </header>
     <main>
-        <p>Contact us</p>
+        <h2>Get in Touch</h2>
+        <p>Please fill out the form below:</p>
+
+        <form>
+            <p>
+                <label>Name:<br>
+                <input type="text" name="name"></label>
+            </p>
+            <p>
+                <label>Email Address:<br>
+                <input type="email" name="email"></label>
+            </p>
+            <p>
+                <label>Reason for Contact:<br>
+                <select name="reason">
+                    <option>Saying hi</option>
+                    <option>Have suggestions</option>
+                    <option>Interested in an interview</option>
+                </select></label>
+            </p>
+            <p>
+                <label>Your Message:<br>
+                <textarea name="message" rows="5" cols="40"></textarea></label>
+            </p>
+            <p>
+                <input type="submit" value="Send">
+            </p>
+        </form>
     </main>
     <footer>
-        <p>&copy; 2025 MI349 Blog</p>
+        <p>&copy; 2025 Molly's Blog</p>
     </footer>
 </body>
 </html>
