--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <article>
             <h2>Michigan's Trees</h2>
             <p><strong>Published:</strong> September 28, 2025 | <strong>Author:</strong> Molly Scherer</p>
-            <img src="https://via.placeholder.com/400" alt="Scenic hiking trail">
+            <img src="fall_msu.jpg" alt="MSU campus in fall" width="400">
             <p>
                 The fall season in Michigan is a truly beautiful time. It brings color and festivity to many parts of the state. Especially in the northern parts of the state, people are able to visit apple orchards, go for hikes, and drive on tree lined highways to take in the colors. In the beginning of fall, I appreciate that the weather is still warm enough to be outside and enjoy the changing leaves.
             </p>
@@ -27,9 +27,9 @@
             </p>
         </article>
         <article>
-            <h2>Cats</h2>
+            <h2>My Cats</h2>
             <p><strong>Published:</strong> September 28, 2025 | <strong>Author:</strong> Molly Scherer</p>
-            <img src="https://via.placeholder.com/400" alt="Pumpkin spice latte and fall treats">
+            <img src="Gertrude.jpeg" alt="My cat Gertrude" width="400">
             <p>
                To me, cats are the best pets to have. They are independent, but also love attention. I have two cats, and they are both very different. One of my cats, Chive, is very playful and loves to chase toys around the house. My other cat, Gertrude, is more laid back and enjoys napping in boxes. Both cats are adorable and love to explore the outdoors.
             </p>
