--- a/about.html
+++ b/about.html
@@ -17,10 +17,10 @@
     <main>
         <section>
             <h2>Hi, I’m Molly!</h2>
-            <img src="https://via.placeholder.com/250" alt="Photo of Molly">
+            <img src="Scherer_Molly3.jpg" alt="headshot" width="200">
 
             <p>
-                Welcome to my blog! This page is for my class at Michigan State University. I am currently a senior studying Information Science. I created this blog as part of my coursework for MI349, where I am learning about web development and content creation.
+                Welcome to my blog! This page is for my class at Michigan State University. I am currently a senior studying Information Science. I created this blog as part of my coursework for MI349, where I am learning about web development.
             </p>
             <p>
                 Once I graduate, I hope to work in database management or data architecture. Eventually, I would like to get a master's degree in data science. Outside of my schooling, I am involved in the marching band here at MSU, I am in a service sorority, and I love to spend time with the people I care about.
