--- a/contact.html
+++ b/contact.html
@@ -18,14 +18,12 @@
         <h2>Get in Touch</h2>
         <p>Please fill out the form below:</p>
 
-        <form>
+        <form name="contact" netlify>
             <p>
-                <label>Name:<br>
-                <input type="text" name="name"></label>
+                <label>Name: <input type="text" name="name"></label>
             </p>
             <p>
-                <label>Email Address:<br>
-                <input type="email" name="email"></label>
+                <label>Email Address: <input type="email" name="email"></label>
             </p>
             <p>
                 <label>Reason for Contact:<br>
