--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <p>&copy; 2025 Molly's Blog</p>
          <section>
             <h3>Subscribe to My Newsletter</h3>
-            <form action="#" method="post">
+            <form name="newsletter" netlify>
                 <label for="email">Enter your email:</label><br>
                 <input type="email" id="email" name="email" placeholder="your email here" required>
                 <button type="submit">Subscribe</button>
