--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
     </header>
     <main>
         <article>
+        <section id="blog">  
+            <section id="blog-post">
             <h2>Michigan's Trees</h2>
             <p><strong>Published:</strong> September 28, 2025 | <strong>Author:</strong> Molly Scherer</p>
             <img src="fall_msu.jpg" alt="MSU campus in fall" width="400">
@@ -26,8 +28,10 @@
             <p>
                 Being a college student at Michigan State, I feel very lucky to constantly be surrounded by the colors of fall. The campus is filled with trees that change, and it is always nice to walk to class and see the beautiful colors. As it gets chillier, it's nice to get a hot coffee and see the trees from a library window while studying.
             </p>
+        </section>
         </article>
         <article>
+            <section id="blog-post">
             <h2>My Cats</h2>
             <p><strong>Published:</strong> September 28, 2025 | <strong>Author:</strong> Molly Scherer</p>
             <img src="Gertrude.jpeg" alt="My cat Gertrude" width="400">
@@ -37,6 +41,7 @@
             <p>
                 Gertrude is my family's cat, and she is a little diva. She loves to cuddle, but only on her terms. She is very vocal and lets us know when she wants attention (and when it's dinner time). Chive, my roommate's cat, is more relaxed and likes to meet everyone who comes into our apartment. He loves to climb and explore, and he is always getting into mischief. .
             </p>
+            <h3>A Few Facts About My Cats:</h3>
             <table border="1" cellpadding="5" cellspacing="0">
                 <thead>
                     <tr>
@@ -57,6 +62,8 @@
                         <td>Longhair, gray with white on chest and paws</td>
                     </tr>
         </article>
+        </section>
+        </section>
 
     </main>
     <footer>
