--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
         <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
-        <h1>Welcome to Molly's Blog</h1>
+    <header class="nav-link">
+        <h1>Welcome to Molly's Blog!</h1>
         <nav>
             <a href="index.html">Home</a> |
             <a href="about.html">About</a> |
@@ -16,12 +16,13 @@
         </nav>
     </header>
     <main>
+        <div class="blog-container">
         <article>
         <section id="blog">  
-            <section id="blog-post">
+            <section class="blog-post">
             <h2>Michigan's Trees</h2>
             <p><strong>Published:</strong> September 28, 2025 | <strong>Author:</strong> Molly Scherer</p>
-            <img src="fall_msu.jpg" alt="MSU campus in fall" width="400">
+            <img src="fall_msu.jpg" alt="MSU campus in fall" width="200">
             <p>
                 The fall season in Michigan is a truly beautiful time. It brings color and festivity to many parts of the state. Especially in the northern parts of the state, people are able to visit apple orchards, go for hikes, and drive on tree lined highways to take in the colors. In the beginning of fall, I appreciate that the weather is still warm enough to be outside and enjoy the changing leaves.
             </p>
@@ -31,10 +32,10 @@
         </section>
         </article>
         <article>
-            <section id="blog-post">
+            <section class="blog-post">
             <h2>My Cats</h2>
             <p><strong>Published:</strong> September 28, 2025 | <strong>Author:</strong> Molly Scherer</p>
-            <img src="Gertrude.jpeg" alt="My cat Gertrude" width="400">
+            <img src="Gertrude.jpeg" alt="My cat Gertrude" width="200">
             <p>
                To me, cats are the best pets to have. They are independent, but also love attention. I have two cats, and they are both very different. One of my cats, Chive, is very playful and loves to chase toys around the house. My other cat, Gertrude, is more laid back and enjoys napping in boxes. Both cats are adorable and love to explore the outdoors.
             </p>
@@ -42,29 +43,32 @@
                 Gertrude is my family's cat, and she is a little diva. She loves to cuddle, but only on her terms. She is very vocal and lets us know when she wants attention (and when it's dinner time). Chive, my roommate's cat, is more relaxed and likes to meet everyone who comes into our apartment. He loves to climb and explore, and he is always getting into mischief. .
             </p>
             <h3>A Few Facts About My Cats:</h3>
-            <table border="1" cellpadding="5" cellspacing="0">
-                <thead>
-                    <tr>
-                        <th>Cat</th>
-                        <th>Age</th>
-                        <th>Coat</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td>Gertrude</td>
-                        <td>5 years</td>
-                        <td>Shorthair, tortoishell, mostly black</td>
-                    </tr>
-                    <tr>
-                        <td>Chive</td>
-                        <td>3 years</td>
-                        <td>Longhair, gray with white on chest and paws</td>
-                    </tr>
-        </article>
+        <table border="1" cellpadding="5" cellspacing="0">
+            <thead>
+                <tr>
+                    <th>Cat</th>
+                    <th>Age</th>
+                    <th>Coat</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>Gertrude</td>
+                    <td>5 years</td>
+                    <td>Shorthair, tortoiseshell, mostly black</td>
+                </tr>
+                <tr>
+                    <td>Chive</td>
+                    <td>3 years</td>
+                    <td>Longhair, gray with white on chest and paws</td>
+                </tr>
+            </tbody>
+        </table>
+    </section>
+</article>
         </section>
         </section>
-
+        </div>
     </main>
     <footer>
         <p>&copy; 2025 Molly's Blog</p>
