--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
+    <header class="nav-link">
         <h1>About Molly and her Blog</h1>
         <nav>
             <a href="index.html">Home</a> |
