--- a/about.html
+++ b/about.html
@@ -7,8 +7,8 @@
         <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header class="nav-link">
         <h1>About Molly and her Blog</h1>
+        <header class="nav-link">
         <nav>
             <a href="index.html">Home</a> |
             <a href="about.html">About</a> |
@@ -16,28 +16,35 @@
         </nav>
     </header>
     <main>
-        <section>
+        <section class="about-info">
             <h2>Hi, I’m Molly!</h2>
-            <img src="Scherer_Molly3.jpg" alt="headshot" width="200">
 
-            <p>
-                Welcome to my blog! This page is for my class at Michigan State University. I am currently a senior studying Information Science. I created this blog as part of my coursework for MI349, where I am learning about web development.
-            </p>
-            <p>
-                Once I graduate, I hope to work in database management or data architecture. Eventually, I would like to get a master's degree in data science. Outside of my schooling, I am involved in the marching band here at MSU, I am in a service sorority, and I love to spend time with the people I care about.
-            </p>
+            <div class="about-content">
+                <img src="Scherer_Molly3.jpg" alt="headshot" width="200">
 
-            <h3>A Few Fun Facts About Me:</h3>
-            <ul>
-                <li>My roommates and I have a cat.</li>
-                <li>I grew up in Lansing, MI.</li>
-                <li>I love to travel - my most recent trip was to Tanzania.</li>
-            </ul>
-
-            <p>
-                Thanks for checking out my blog - I hope to see you soon!
-            </p>
+                <div class="about-text">
+                    <p>
+                        Welcome to my blog! This page is for my class at Michigan State University. I am currently a senior studying Information Science. I created this blog as part of my coursework for MI349, where I am learning about web development.
+                    </p>
+                    <p>
+                        Once I graduate, I hope to work in database management or data architecture. Eventually, I would like to get a master's degree in data science. Outside of my schooling, I am involved in the marching band here at MSU, I am in a service sorority, and I love to spend time with the people I care about.
+                    </p>
+                </div>
+            </div>
         </section>
+            <div class="about-facts">
+            <h3>A Few Fun Facts About Me:</h3>
+                <ul>
+                    <li>My roommates and I have a cat.</li>
+                    <li>I grew up in Lansing, MI.</li>
+                    <li>I love to travel - my most recent trip was to Tanzania.</li>
+                </ul>
+
+                <p>
+                Thanks for checking out my blog - I hope to see you soon!
+                </p>
+            </div>
+        
     </main>
     <footer>
         <p>&copy; 2025 Molly's Blog</p>
