--- a/contact.html
+++ b/contact.html
@@ -7,8 +7,8 @@
         <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header class="nav-link">
         <h1>Contact Molly's Blog</h1>
+        <header class="nav-link">
         <nav>
             <a href="index.html">Home</a> |
             <a href="about.html">About</a> |
@@ -16,6 +16,7 @@
         </nav>
     </header>
     <main>
+        <div class="contact-info">
         <h2>Get in Touch</h2>
         <p>Please fill out the form below:</p>
 
@@ -42,6 +43,7 @@
                 <input type="submit" value="Send">
             </p>
         </form>
+        </div>
     </main>
     <footer>
         <p>&copy; 2025 Molly's Blog</p>
