--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
         <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header class="nav-link">
         <h1>Welcome to Molly's Blog!</h1>
+    <header class="nav-link">
         <nav>
             <a href="index.html">Home</a> |
             <a href="about.html">About</a> |
@@ -35,15 +35,19 @@
             <section class="blog-post">
             <h2>My Cats</h2>
             <p><strong>Published:</strong> September 28, 2025 | <strong>Author:</strong> Molly Scherer</p>
-            <img src="Gertrude.jpeg" alt="My cat Gertrude" width="200">
+            <figure>
+                <img src="Gertrude.jpeg" class="floated" src="cat1.jpg" alt="Gertrude the cat" width="200">
+                <figcaption>Gertrude posing for a picture.</figcaption>
+            </figure>
             <p>
                To me, cats are the best pets to have. They are independent, but also love attention. I have two cats, and they are both very different. One of my cats, Chive, is very playful and loves to chase toys around the house. My other cat, Gertrude, is more laid back and enjoys napping in boxes. Both cats are adorable and love to explore the outdoors.
             </p>
             <p>
-                Gertrude is my family's cat, and she is a little diva. She loves to cuddle, but only on her terms. She is very vocal and lets us know when she wants attention (and when it's dinner time). Chive, my roommate's cat, is more relaxed and likes to meet everyone who comes into our apartment. He loves to climb and explore, and he is always getting into mischief. .
+                Gertrude is my family's cat, and she is a little diva. She loves to cuddle, but only on her terms. She is very vocal and lets us know when she wants attention (and when it's dinner time). Chive, my roommate's cat, is more relaxed and likes to meet everyone who comes into our apartment. He loves to climb and explore, and he is always getting into mischief.
             </p>
+    <div class="cat-facts">
             <h3>A Few Facts About My Cats:</h3>
-        <table border="1" cellpadding="5" cellspacing="0">
+        <table cellspacing="0">
             <thead>
                 <tr>
                     <th>Cat</th>
@@ -64,7 +68,8 @@
                 </tr>
             </tbody>
         </table>
-    </section>
+    </div>
+        </section>
 </article>
         </section>
         </section>
