--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,7 @@
         <h2>Get in Touch</h2>
         <p>Please fill out the form below:</p>
 
-        <form name="contact" netlify>
+        <form name="contact" data-netlify="true">
             <p>
                 <label>Name: <input type="text" name="name"></label>
             </p>
@@ -28,7 +28,7 @@
                 <label>Email Address: <input type="email" name="email"></label>
             </p>
             <p>
-                <label>Reason for Contact:<br>
+                <label>Reason for Contact:
                 <select name="reason">
                     <option>Saying hi</option>
                     <option>Have suggestions</option>
@@ -36,7 +36,7 @@
                 </select></label>
             </p>
             <p>
-                <label>Your Message:<br>
+                <label>Your Message:
                 <textarea name="message" rows="5" cols="40"></textarea></label>
             </p>
             <p>
