--- a/index.html
+++ b/index.html
@@ -30,13 +30,14 @@
                 Being a college student at Michigan State, I feel very lucky to constantly be surrounded by the colors of fall. The campus is filled with trees that change, and it is always nice to walk to class and see the beautiful colors. As it gets chillier, it's nice to get a hot coffee and see the trees from a library window while studying.
             </p>
         </section>
+        </section>
         </article>
         <article>
             <section class="blog-post">
             <h2>My Cats</h2>
             <p><strong>Published:</strong> September 28, 2025 | <strong>Author:</strong> Molly Scherer</p>
             <figure>
-                <img src="Gertrude.jpeg" class="floated" src="cat1.jpg" alt="Gertrude the cat" width="200">
+                <img src="Gertrude.jpeg" class="floated" alt="Gertrude" width="200">
                 <figcaption>Gertrude posing for a picture.</figcaption>
             </figure>
             <p>
@@ -47,7 +48,7 @@
             </p>
     <div class="cat-facts">
             <h3>A Few Facts About My Cats:</h3>
-        <table cellspacing="0">
+        <table>
             <thead>
                 <tr>
                     <th>Cat</th>
@@ -71,16 +72,14 @@
     </div>
         </section>
 </article>
-        </section>
-        </section>
         </div>
     </main>
     <footer>
         <p>&copy; 2025 Molly's Blog</p>
          <section>
             <h3>Subscribe to My Newsletter</h3>
-            <form name="newsletter" netlify>
-                <label for="email">Enter your email:</label><br>
+            <form name="newsletter" data-netlify="true">
+                <label for="email">Enter your email:</label>
                 <input type="email" id="email" name="email" placeholder="your email here" required>
                 <button type="submit">Subscribe</button>
             </form>
